--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@tanstack/react-query-devtools": "^5.58.0",
         "dotenv": "^16.4.5",
         "leaflet": "^1.9.4",
+        "lucide-react": "^0.503.0",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-hook-form": "^7.53.0",
