--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "@supabase/supabase-js": "^2.45.4",
         "@tanstack/react-query": "^5.56.2",
         "@tanstack/react-query-devtools": "^5.58.0",
+        "clsx": "^2.1.1",
         "dotenv": "^16.4.5",
         "leaflet": "^1.9.4",
         "lucide-react": "^0.503.0",
