--- a/.gitignore
+++ b/.gitignore
@@ -12,8 +12,8 @@ dist
 dist-ssr
 *.local
 .env
-
-package-lock.json
+.env.*
+!.env.example
 
 # Editor directories and files
 .vscode/*
@@ -25,3 +25,14 @@ package-lock.json
 *.njsproj
 *.sln
 *.sw?
+
+# Testing
+coverage/
+
+# Build
+build/
+out/
+
+# Cache
+.cache/
+.temp/
